--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  vibration: ^1.8.4
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -59,9 +61,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/black_mage.png
+    - assets/images/gloom.jpg
+    - assets/images/kalos.jpg
+    - assets/images/verus_hilla.jpg
+    - assets/images/kalosnotwhite.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
